tests/snapshots/codegen_snapshot_tests__async_main_runtime_bootstrap.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 1802
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::r#async;
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    if let Err(error) = incan_stdlib::r#async::runtime::block_on(async move {
        let _ = println!("{}", "hello");
    }) {
        eprintln!("{error}");
        std::process::exit(1);
    }
}
fn main() {
    main();
}
