tests/snapshots/codegen_snapshot_tests__builtins.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn test_print_builtin() {
    let _ = println!("{}", "hello");
    let _ = println!("{}", "world");
}
fn test_len_builtin() {
    let items: Vec<i64> = vec![1, 2, 3, 4, 5];
    let length: i64 = ::std::convert::identity(items.len() as i64);
    let _ = println!("{}", length);
}
fn test_range_builtin() {
    for i in 0_i64..(5 as i64) {
        let _ = println!("{}", i);
    }
}
fn test_sum_builtin() {
    let numbers: Vec<i64> = vec![1, 2, 3, 4, 5];
    let total: i64 = (numbers)
        .iter()
        .try_fold(0_i64, |total, value| total.checked_add(*value))
        .unwrap_or_else(|| {
            incan_stdlib::errors::raise_value_error("integer overflow in builtin `sum`")
        });
    let _ = println!("{}", total);
}
fn test_min_max_builtins() {
    let values: Vec<i64> = vec![3, 1, 4, 1, 5, 9];
    let minimum: i64 = incan_stdlib::collections::__private::list_min_copy(&values);
    let maximum: i64 = incan_stdlib::collections::__private::list_max_copy(&values);
    let _ = println!("{}", minimum);
    let _ = println!("{}", maximum);
}
fn test_abs_builtin() {
    let negative: i64 = -42;
    let positive: i64 = ::std::convert::identity::<i64>(negative)
        .checked_abs()
        .unwrap_or_else(|| {
            incan_stdlib::errors::raise_value_error("integer overflow in builtin `abs`")
        });
    let _ = println!("{}", positive);
}
fn test_str_builtin() {
    let number: i64 = 123;
    let text: String = number.to_string();
    let _ = println!("{}", text);
}
fn test_int_builtin() {
    let text: String = "456".to_string();
    let number: i64 = incan_stdlib::conversions::int_from_str(&text);
    let _ = println!("{}", number);
}
fn test_float_builtin() {
    let whole: i64 = 42;
    let decimal: f64 = (whole) as f64;
    let _ = println!("{}", decimal);
}
fn test_bool_builtin() {
    let value: i64 = 1;
    let flag: bool = (value) != 0;
    let _ = println!("{}", flag);
}
fn test_sorted_builtin() {
    let items: Vec<i64> = vec![3, 1, 4, 1, 5];
    let sorted_items: Vec<i64> = {
        let mut __v = (items).clone();
        __v.sort();
        __v
    };
    let _ = println!("{}", sorted_items);
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = test_print_builtin();
    let _ = test_len_builtin();
    let _ = test_range_builtin();
    let _ = test_sum_builtin();
    let _ = test_min_max_builtins();
    let _ = test_abs_builtin();
    let _ = test_str_builtin();
    let _ = test_int_builtin();
    let _ = test_float_builtin();
    let _ = test_bool_builtin();
    let _ = test_sorted_builtin();
}
fn main() {
    main();
}
