tests/snapshots/codegen_snapshot_tests__collection_literal_spread.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 4197
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let tail: (i64, i64) = (4, 5);
    let values = {
        let mut __incan_list = Vec::new();
        __incan_list.push(1);
        __incan_list.extend((vec![2, 3]).into_iter());
        __incan_list.push(tail.0);
        __incan_list.push(tail.1);
        __incan_list
    };
    let defaults = [
        ("trace".to_string(), "disabled".to_string()),
        ("accept".to_string(), "json".to_string()),
    ]
        .into_iter()
        .collect::<std::collections::HashMap<_, _>>();
    let merged = {
        let mut __incan_dict = std::collections::HashMap::new();
        for (__incan_key, __incan_value) in (defaults).into_iter() {
            __incan_dict.insert(__incan_key, __incan_value);
        }
        __incan_dict.insert("trace".to_string(), "enabled".to_string());
        __incan_dict
    };
    let _ = println!(
        "{}", * incan_stdlib::collections::list_get(& values, (0) as i64) + *
        incan_stdlib::collections::list_get(& values, (1) as i64) + *
        incan_stdlib::collections::list_get(& values, (2) as i64) + *
        incan_stdlib::collections::list_get(& values, (3) as i64) + *
        incan_stdlib::collections::list_get(& values, (4) as i64)
    );
    let _ = println!(
        "{}", incan_stdlib::collections::dict_get(& merged, < _ as AsRef < str >>
        ::as_ref(& "trace")).clone()
    );
}
fn main() {
    main();
}
