tests/snapshots/codegen_snapshot_tests__collections.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 2407
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn test_collections() {
    let _empty_list: Vec<i64> = vec![];
    let _empty_dict: std::collections::HashMap<String, i64> = std::collections::HashMap::new();
    let numbers: Vec<i64> = vec![1, 2, 3, 4, 5];
    let _strings: Vec<String> = vec!["a".to_string(), "b".to_string(), "c".to_string()];
    let _matrix: Vec<Vec<i64>> = vec![vec![1, 2], vec![3, 4]];
    let simple_dict: std::collections::HashMap<String, i64> = [
        ("a".to_string(), 1),
        ("b".to_string(), 2),
    ]
        .into_iter()
        .collect::<std::collections::HashMap<_, _>>();
    let _int_keys: std::collections::HashMap<i64, String> = [
        (1, "one".to_string()),
        (2, "two".to_string()),
    ]
        .into_iter()
        .collect::<std::collections::HashMap<_, _>>();
    let _nested: std::collections::HashMap<
        String,
        std::collections::HashMap<String, i64>,
    > = [
        (
            "first".to_string(),
            [("x".to_string(), 1), ("y".to_string(), 2)]
                .into_iter()
                .collect::<std::collections::HashMap<_, _>>(),
        ),
        (
            "second".to_string(),
            [("x".to_string(), 3), ("y".to_string(), 4)]
                .into_iter()
                .collect::<std::collections::HashMap<_, _>>(),
        ),
    ]
        .into_iter()
        .collect::<std::collections::HashMap<_, _>>();
    let pair: (i64, String) = (1, "one".to_string());
    let triple: (i64, i64, i64) = (1, 2, 3);
    let _multiple: Tuple = ("a".to_string(), pair, "b".to_string(), triple, 42);
    let _first: i64 = *incan_stdlib::collections::list_get(&numbers, (0) as i64);
    let _last: i64 = *incan_stdlib::collections::list_get(&numbers, (-1) as i64);
    let _value: i64 = *incan_stdlib::collections::dict_get(
        &simple_dict,
        <_ as AsRef<str>>::as_ref(&"a"),
    );
    let _sub_list: Vec<i64> = incan_stdlib::collections::list_slice(
        &numbers,
        Some((1) as i64),
        Some((3) as i64),
        None,
    );
    let _all_but_first: Vec<i64> = incan_stdlib::collections::list_slice(
        &numbers,
        Some((1) as i64),
        None,
        None,
    );
    let _all_but_last: Vec<i64> = incan_stdlib::collections::list_slice(
        &numbers,
        None,
        Some((-1) as i64),
        None,
    );
    let more_numbers: Vec<i64> = vec![6, 7];
    let combined: Vec<i64> = incan_stdlib::collections::list_concat(
        &numbers,
        &more_numbers,
    );
    let _original_tail: i64 = *incan_stdlib::collections::list_get(
        &numbers,
        (-1) as i64,
    );
    let _source_tail: i64 = *incan_stdlib::collections::list_get(
        &more_numbers,
        (-1) as i64,
    );
    let _combined_tail: i64 = *incan_stdlib::collections::list_get(
        &combined,
        (-1) as i64,
    );
    let mut extended: Vec<i64> = vec![8, 9];
    let _ = incan_stdlib::collections::list_extend(&mut extended, &more_numbers);
    let _extended_tail: i64 = *incan_stdlib::collections::list_get(
        &extended,
        (-1) as i64,
    );
    let _source_tail_after_extend: i64 = *incan_stdlib::collections::list_get(
        &more_numbers,
        (-1) as i64,
    );
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = test_collections();
}
fn main() {
    main();
}
