tests/snapshots/codegen_snapshot_tests__const_bytes.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 4028
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
const RAW: &'static [u8] = b"\0\x01";
const FROZEN: incan_stdlib::frozen::FrozenBytes = incan_stdlib::frozen::FrozenBytes::new(
    b"\x02\x03",
);
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = println!("{}", RAW.len());
    let _ = println!("{}", FROZEN.len());
}
fn main() {
    main();
}
