tests/snapshots/codegen_snapshot_tests__const_str_chain.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 4021
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
const A: &'static str = "hello";
const B: &'static str = concat!("hello", " world");
const C: &'static str = concat!("hello world", "!");
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = println!("{}", C);
    let _ = println!("{}", concat!("hello world!", "?"));
}
fn main() {
    main();
}
